@@ -1283,36 +1283,45 @@ SEXP attribute_hidden do_POSIXlt2D(SEXP call, SEXP op, SEXP args, SEXP env)
 	error(_("invalid '%s' argument"), "x");
 
     R_xlen_t n = 0, nlen[9];
-    for(int i = 3; i < 6; i++)
-	if((nlen[i] = XLENGTH(VECTOR_ELT(x, i))) > n) n = nlen[i];
-    if((nlen[0] = XLENGTH(VECTOR_ELT(x, 0))) > n) n = nlen[0]; // sec; need for Inf,NaN,..
+    for(int i = 0; i < 6; i++)
+	if((nlen[i] = XLENGTH(VECTOR_ELT(x, i))) > n) n = nlen[i];// incl {sec,min,hour}
     if((nlen[8] = XLENGTH(VECTOR_ELT(x, 8))) > n) n = nlen[8]; // isdst
     if(n > 0) {
-	check_nlen(0);
-	for(int i = 3; i < 6; i++)
+	for(int i = 0; i < 6; i++)
 	    check_nlen(i);
 	check_nlen(8);
     }
-    /* coerce relevant fields [3,4,5] = [mday,mon,year] to integer */
-    for(int i = 3; i < 6; i++)
+    /* coerce fields to integer or real */
+    SET_VECTOR_ELT(x, 0, coerceVector(VECTOR_ELT(x, 0), REALSXP));
+    for(int i = 1; i < 6; i++)
 	SET_VECTOR_ELT(x, i, coerceVector(VECTOR_ELT(x, i), INTSXP));
 
     SEXP ans = PROTECT(allocVector(REALSXP, n));
     for(R_xlen_t i = 0; i < n; i++) {
+	// need to treat {sec, min, hour} in out-of-range case {where fixup *may* change day,month...
+	double secs = REAL(VECTOR_ELT(x, 0))[i%nlen[0]], fsecs = floor(secs);
 	stm tm;
-	tm.tm_sec = tm.tm_min = tm.tm_hour = 0;
+	// avoid (int) NAN
+	tm.tm_sec   = R_FINITE(secs) ? (int) fsecs: NA_INTEGER;
+	tm.tm_min   = INTEGER(VECTOR_ELT(x, 1))[i%nlen[1]];
+	tm.tm_hour  = INTEGER(VECTOR_ELT(x, 2))[i%nlen[2]];
 	tm.tm_mday  = INTEGER(VECTOR_ELT(x, 3))[i%nlen[3]];
 	tm.tm_mon   = INTEGER(VECTOR_ELT(x, 4))[i%nlen[4]];
 	tm.tm_year  = INTEGER(VECTOR_ELT(x, 5))[i%nlen[5]];
 	/* mktime ignores tm.tm_wday and tm.tm_yday */
 	tm.tm_isdst = 0;
-	if(tm.tm_mday == NA_INTEGER || tm.tm_mon == NA_INTEGER ||
-	   tm.tm_year == NA_INTEGER || validate_tm(&tm) < 0) // non-finite: take the 'sec'
-	    REAL(ans)[i] = REAL(VECTOR_ELT(x, 0))[i%nlen[0]];
-	else {
+	if(!R_FINITE(secs)) // +/-Inf, NA, NaN
+	    REAL(ans)[i] = secs;
+	else if(tm.tm_min  == NA_INTEGER || tm.tm_hour == NA_INTEGER || tm.tm_mday == NA_INTEGER ||
+		tm.tm_mon  == NA_INTEGER || tm.tm_year == NA_INTEGER)
+	    REAL(ans)[i] = NA_REAL;
+	else if(validate_tm(&tm) < 0) /* validate_tm() fixes up out-of-range {sec,min,...} */
+	    REAL(ans)[i] = NA_REAL;
+	else { // normal case:
+	    tm.tm_sec = tm.tm_min = tm.tm_hour = 0; // -> result should already be multiple of 24*60*60 = 86400
 	    /* -1 must be error as seconds were zeroed */
 	    double tmp = mktime00(&tm);
-	    REAL(ans)[i] = (tmp == -1) ? NA_REAL : tmp/86400;
+	    REAL(ans)[i] = (tmp == -1) ? NA_REAL : nearbyint(tmp/86400.); // nearbyint() "just in case"
 	}
     }
 
